Update for Pillow 10 annotepic.ipynb

--- a/image_annotation/annotepic.ipynb
+++ b/image_annotation/annotepic.ipynb
@@ -56,7 +56,7 @@
     "    padded_img = ImageOps.expand(cropped_img, (padding_width, padding_height, padding_width, padding_height), fill=(0, 0, 0, 0))\n",
     "    \n",
     "    # Resize the padded image while maintaining aspect ratio\n",
-    "    padded_img.thumbnail(target_size, Image.ANTIALIAS)\n",
+    "    padded_img.thumbnail(target_size, Image.Resampling.LANCZOS)\n",
     "    \n",
     "    # Create a new blank image with target size\n",
     "    new_img = Image.new(\"RGBA\", target_size, (0, 0, 0, 0))\n",
